# pyric

./: .cruft.json  .gitignore  .gitmodules  Readme.md  pyproject.toml
pyric/: __init__.py  __main__.py  build.py  cmake.py  init.py  pyunrealsdk.py
pyric/assets/: CMakeLists.txt  CMakePresets.json  __init__.py
