[project]
name = "pyric"
version = "0.1"
dependencies = ["requests"]
readme = { file = "Readme.md", content-type = "text/markdown" }
license.file = "LICENSE"

[project.scripts]
pyric = "pyric.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data."pyric.assets" = ["**/*"]

[tool.black]
line-length = 100

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
select = [
    "F",
    "W",
    "E",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "FA",
    "ISC",
    "G",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLOT",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "FLY",
    "PERF",
    "RUF",
]
ignore = [
    "D100",
    "D101",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D203",
    "D212",
    "D401",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D413",
    "ANN101",
    "ANN102",
    "ANN401",
    "PYI011",
    "PYI021",
    "PYI029",
    "PYI044",
]

[tool.ruff.per-file-ignores]
"*.pyi" = ["D418", "A002", "A003"]
